# CMakeLists for proccontrol/g++/32/stat/none/none
set (CMAKE_CXX_FLAGS "${MUTATOR_DEFINES}  ${CXXFLAGS} ${MUTATEE_CXXFLAGS_GNU}   -g -O0 -no-pie")
set (CMAKE_CXX_FLAGS_DEBUG "")
set (CMAKE_CXX_FLAGS_RELEASE "")
set (CMAKE_CXX_FLAGS_RELWITHDEBINFO "")
set (CMAKE_CXX_COMPILER "${M_gnu_cxx}")
include_directories("${PROJECT_SOURCE_DIR}/testsuite/src")
include_directories("${PROJECT_SOURCE_DIR}/testsuite/src/proccontrol")
add_definitions(-DSOLO_MUTATEE)
set (CMAKE_SKIP_INSTALL_RPATH TRUE)
set (CMAKE_EXE_LINKER_FLAGS "${MUTATEE_LDFLAGS_GNU}  -static")
IF (NOT ${M_gnu_cxx} MATCHES "NOTFOUND")
CHECK_MUTATEE_COMPILER ("${M_gnu_cxx}"
	"${MUTATOR_DEFINES}  ${CXXFLAGS} ${MUTATEE_CXXFLAGS_GNU}   -g -O0 -no-pie"
	"${MUTATEE_LDFLAGS_GNU}  -static"
	"CXX"
	"gnu_cxx 32 stat"
	MUTATEEgnucxx32statCXX)

IF (MUTATEEgnucxx32statCXX MATCHES "1")
include (${PROJECT_SOURCE_DIR}/i386-unknown-freebsd7.2/srclists.cmake)
if(TARGET pcontrol)
add_executable (pc_breakpoint.stat_g++_32_none_none ${SOURCE_LIST_32})
foreach (f ${SOURCE_LIST_32})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE CXX)
	endif()
	endforeach()
set_target_properties(pc_breakpoint.stat_g++_32_none_none PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries (pc_breakpoint.stat_g++_32_none_none ${CMAKE_THREAD_LIBS_INIT})
add_executable (pc_detach.stat_g++_32_none_none ${SOURCE_LIST_11})
foreach (f ${SOURCE_LIST_11})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE CXX)
	endif()
	endforeach()
set_target_properties(pc_detach.stat_g++_32_none_none PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries (pc_detach.stat_g++_32_none_none ${CMAKE_THREAD_LIBS_INIT})
add_executable (pc_groups.stat_g++_32_none_none ${SOURCE_LIST_38})
foreach (f ${SOURCE_LIST_38})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE CXX)
	endif()
	endforeach()
set_target_properties(pc_groups.stat_g++_32_none_none PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries (pc_groups.stat_g++_32_none_none ${CMAKE_THREAD_LIBS_INIT})
add_executable (pc_irpc.stat_g++_32_none_none ${SOURCE_LIST_65})
foreach (f ${SOURCE_LIST_65})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE CXX)
	endif()
	endforeach()
set_target_properties(pc_irpc.stat_g++_32_none_none PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries (pc_irpc.stat_g++_32_none_none ${CMAKE_THREAD_LIBS_INIT})
add_executable (pc_launch.stat_g++_32_none_none ${SOURCE_LIST_66})
foreach (f ${SOURCE_LIST_66})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE CXX)
	endif()
	endforeach()
set_target_properties(pc_launch.stat_g++_32_none_none PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries (pc_launch.stat_g++_32_none_none ${CMAKE_THREAD_LIBS_INIT})
add_executable (pc_singlestep.stat_g++_32_none_none ${SOURCE_LIST_29})
foreach (f ${SOURCE_LIST_29})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE CXX)
	endif()
	endforeach()
set_target_properties(pc_singlestep.stat_g++_32_none_none PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries (pc_singlestep.stat_g++_32_none_none ${CMAKE_THREAD_LIBS_INIT})
add_executable (pc_stat.stat_g++_32_none_none ${SOURCE_LIST_9})
foreach (f ${SOURCE_LIST_9})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE CXX)
	endif()
	endforeach()
set_target_properties(pc_stat.stat_g++_32_none_none PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries (pc_stat.stat_g++_32_none_none ${CMAKE_THREAD_LIBS_INIT})
add_executable (pc_temp_detach.stat_g++_32_none_none ${SOURCE_LIST_5})
foreach (f ${SOURCE_LIST_5})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE CXX)
	endif()
	endforeach()
set_target_properties(pc_temp_detach.stat_g++_32_none_none PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries (pc_temp_detach.stat_g++_32_none_none ${CMAKE_THREAD_LIBS_INIT})
add_executable (pc_terminate.stat_g++_32_none_none ${SOURCE_LIST_25})
foreach (f ${SOURCE_LIST_25})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE CXX)
	endif()
	endforeach()
set_target_properties(pc_terminate.stat_g++_32_none_none PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries (pc_terminate.stat_g++_32_none_none ${CMAKE_THREAD_LIBS_INIT})
add_executable (pc_terminate_stopped.stat_g++_32_none_none ${SOURCE_LIST_47})
foreach (f ${SOURCE_LIST_47})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE CXX)
	endif()
	endforeach()
set_target_properties(pc_terminate_stopped.stat_g++_32_none_none PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries (pc_terminate_stopped.stat_g++_32_none_none ${CMAKE_THREAD_LIBS_INIT})
add_executable (pc_thread.stat_g++_32_none_none ${SOURCE_LIST_37})
foreach (f ${SOURCE_LIST_37})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE CXX)
	endif()
	endforeach()
set_target_properties(pc_thread.stat_g++_32_none_none PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries (pc_thread.stat_g++_32_none_none ${CMAKE_THREAD_LIBS_INIT})
add_executable (pc_thread_cont.stat_g++_32_none_none ${SOURCE_LIST_19})
foreach (f ${SOURCE_LIST_19})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE CXX)
	endif()
	endforeach()
set_target_properties(pc_thread_cont.stat_g++_32_none_none PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries (pc_thread_cont.stat_g++_32_none_none ${CMAKE_THREAD_LIBS_INIT})
add_executable (pc_tls.stat_g++_32_none_none ${SOURCE_LIST_54})
foreach (f ${SOURCE_LIST_54})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE CXX)
	endif()
	endforeach()
set_target_properties(pc_tls.stat_g++_32_none_none PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries (pc_tls.stat_g++_32_none_none ${CMAKE_THREAD_LIBS_INIT})


INSTALL (TARGETS
		pc_breakpoint.stat_g++_32_none_none
		pc_detach.stat_g++_32_none_none
		pc_groups.stat_g++_32_none_none
		pc_irpc.stat_g++_32_none_none
		pc_launch.stat_g++_32_none_none
		pc_singlestep.stat_g++_32_none_none
		pc_stat.stat_g++_32_none_none
		pc_temp_detach.stat_g++_32_none_none
		pc_terminate.stat_g++_32_none_none
		pc_terminate_stopped.stat_g++_32_none_none
		pc_thread.stat_g++_32_none_none
		pc_thread_cont.stat_g++_32_none_none
		pc_tls.stat_g++_32_none_none
	DESTINATION ${INSTALL_DIR})

ENDIF()
ENDIF()
ENDIF()
