# CMakeLists for dyninst/gfortran/32/dyn/none/none
set (CMAKE_Fortran_FLAGS "${MUTATOR_DEFINES}  -g ${MUTATEE_G77_FFLAGS}  -g -O0 -no-pie")
set (CMAKE_Fortran_FLAGS_DEBUG "")
set (CMAKE_Fortran_FLAGS_RELEASE "")
set (CMAKE_Fortran_FLAGS_RELWITHDEBINFO "")
set (CMAKE_Fortran_COMPILER "${M_gnu_fc}")
include_directories("${PROJECT_SOURCE_DIR}/testsuite/src")
include_directories("${PROJECT_SOURCE_DIR}/testsuite/src/dyninst")
add_definitions(-DSOLO_MUTATEE)
set (CMAKE_EXE_LINKER_FLAGS "${MUTATEE_G77_LDFLAGS}  ")
IF (NOT ${M_gnu_fc} MATCHES "NOTFOUND")
CHECK_MUTATEE_COMPILER ("${M_gnu_fc}"
	"${MUTATOR_DEFINES}  -g ${MUTATEE_G77_FFLAGS}  -g -O0 -no-pie"
	"${MUTATEE_G77_LDFLAGS}  "
	"Fortran"
	"gnu_fc 32 dyn"
	MUTATEEgnufc32dynFortran)

IF (MUTATEEgnufc32dynFortran MATCHES "1")
include (${PROJECT_SOURCE_DIR}/i386-unknown-linux2.4/srclists.cmake)
if(TARGET dyninstAPI)
add_executable (test1_10F.dyn_gfortran_32_none_none ${SOURCE_LIST_16})
foreach (f ${SOURCE_LIST_16})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE Fortran)
	endif()
	endforeach()
set_target_properties(test1_10F.dyn_gfortran_32_none_none PROPERTIES LINKER_LANGUAGE Fortran)
add_executable (test1_11F.dyn_gfortran_32_none_none ${SOURCE_LIST_11})
foreach (f ${SOURCE_LIST_11})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE Fortran)
	endif()
	endforeach()
set_target_properties(test1_11F.dyn_gfortran_32_none_none PROPERTIES LINKER_LANGUAGE Fortran)
add_executable (test1_12F.dyn_gfortran_32_none_none ${SOURCE_LIST_32})
foreach (f ${SOURCE_LIST_32})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE Fortran)
	endif()
	endforeach()
set_target_properties(test1_12F.dyn_gfortran_32_none_none PROPERTIES LINKER_LANGUAGE Fortran)
add_executable (test1_13F.dyn_gfortran_32_none_none ${SOURCE_LIST_74})
foreach (f ${SOURCE_LIST_74})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE Fortran)
	endif()
	endforeach()
set_target_properties(test1_13F.dyn_gfortran_32_none_none PROPERTIES LINKER_LANGUAGE Fortran)
add_executable (test1_14F.dyn_gfortran_32_none_none ${SOURCE_LIST_92})
foreach (f ${SOURCE_LIST_92})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE Fortran)
	endif()
	endforeach()
set_target_properties(test1_14F.dyn_gfortran_32_none_none PROPERTIES LINKER_LANGUAGE Fortran)
add_executable (test1_16F.dyn_gfortran_32_none_none ${SOURCE_LIST_18})
foreach (f ${SOURCE_LIST_18})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE Fortran)
	endif()
	endforeach()
set_target_properties(test1_16F.dyn_gfortran_32_none_none PROPERTIES LINKER_LANGUAGE Fortran)
add_executable (test1_17F.dyn_gfortran_32_none_none ${SOURCE_LIST_27})
foreach (f ${SOURCE_LIST_27})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE Fortran)
	endif()
	endforeach()
set_target_properties(test1_17F.dyn_gfortran_32_none_none PROPERTIES LINKER_LANGUAGE Fortran)
add_executable (test1_18F.dyn_gfortran_32_none_none ${SOURCE_LIST_69})
foreach (f ${SOURCE_LIST_69})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE Fortran)
	endif()
	endforeach()
set_target_properties(test1_18F.dyn_gfortran_32_none_none PROPERTIES LINKER_LANGUAGE Fortran)
add_executable (test1_19F.dyn_gfortran_32_none_none ${SOURCE_LIST_82})
foreach (f ${SOURCE_LIST_82})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE Fortran)
	endif()
	endforeach()
set_target_properties(test1_19F.dyn_gfortran_32_none_none PROPERTIES LINKER_LANGUAGE Fortran)
add_executable (test1_1F.dyn_gfortran_32_none_none ${SOURCE_LIST_48})
foreach (f ${SOURCE_LIST_48})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE Fortran)
	endif()
	endforeach()
set_target_properties(test1_1F.dyn_gfortran_32_none_none PROPERTIES LINKER_LANGUAGE Fortran)
add_executable (test1_20F.dyn_gfortran_32_none_none ${SOURCE_LIST_43})
foreach (f ${SOURCE_LIST_43})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE Fortran)
	endif()
	endforeach()
set_target_properties(test1_20F.dyn_gfortran_32_none_none PROPERTIES LINKER_LANGUAGE Fortran)
add_executable (test1_25F.dyn_gfortran_32_none_none ${SOURCE_LIST_12})
foreach (f ${SOURCE_LIST_12})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE Fortran)
	endif()
	endforeach()
set_target_properties(test1_25F.dyn_gfortran_32_none_none PROPERTIES LINKER_LANGUAGE Fortran)
add_executable (test1_29F.dyn_gfortran_32_none_none ${SOURCE_LIST_36})
foreach (f ${SOURCE_LIST_36})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE Fortran)
	endif()
	endforeach()
set_target_properties(test1_29F.dyn_gfortran_32_none_none PROPERTIES LINKER_LANGUAGE Fortran)
add_executable (test1_2F.dyn_gfortran_32_none_none ${SOURCE_LIST_29})
foreach (f ${SOURCE_LIST_29})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE Fortran)
	endif()
	endforeach()
set_target_properties(test1_2F.dyn_gfortran_32_none_none PROPERTIES LINKER_LANGUAGE Fortran)
add_executable (test1_31F.dyn_gfortran_32_none_none ${SOURCE_LIST_54})
foreach (f ${SOURCE_LIST_54})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE Fortran)
	endif()
	endforeach()
set_target_properties(test1_31F.dyn_gfortran_32_none_none PROPERTIES LINKER_LANGUAGE Fortran)
add_executable (test1_32F.dyn_gfortran_32_none_none ${SOURCE_LIST_9})
foreach (f ${SOURCE_LIST_9})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE Fortran)
	endif()
	endforeach()
set_target_properties(test1_32F.dyn_gfortran_32_none_none PROPERTIES LINKER_LANGUAGE Fortran)
add_executable (test1_34F.dyn_gfortran_32_none_none ${SOURCE_LIST_44})
foreach (f ${SOURCE_LIST_44})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE Fortran)
	endif()
	endforeach()
set_target_properties(test1_34F.dyn_gfortran_32_none_none PROPERTIES LINKER_LANGUAGE Fortran)
add_executable (test1_36F.dyn_gfortran_32_none_none ${SOURCE_LIST_24})
foreach (f ${SOURCE_LIST_24})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE Fortran)
	endif()
	endforeach()
set_target_properties(test1_36F.dyn_gfortran_32_none_none PROPERTIES LINKER_LANGUAGE Fortran)
add_executable (test1_3F.dyn_gfortran_32_none_none ${SOURCE_LIST_64})
foreach (f ${SOURCE_LIST_64})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE Fortran)
	endif()
	endforeach()
set_target_properties(test1_3F.dyn_gfortran_32_none_none PROPERTIES LINKER_LANGUAGE Fortran)
add_executable (test1_4F.dyn_gfortran_32_none_none ${SOURCE_LIST_96})
foreach (f ${SOURCE_LIST_96})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE Fortran)
	endif()
	endforeach()
set_target_properties(test1_4F.dyn_gfortran_32_none_none PROPERTIES LINKER_LANGUAGE Fortran)
add_executable (test1_5F.dyn_gfortran_32_none_none ${SOURCE_LIST_46})
foreach (f ${SOURCE_LIST_46})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE Fortran)
	endif()
	endforeach()
set_target_properties(test1_5F.dyn_gfortran_32_none_none PROPERTIES LINKER_LANGUAGE Fortran)
add_executable (test1_6F.dyn_gfortran_32_none_none ${SOURCE_LIST_57})
foreach (f ${SOURCE_LIST_57})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE Fortran)
	endif()
	endforeach()
set_target_properties(test1_6F.dyn_gfortran_32_none_none PROPERTIES LINKER_LANGUAGE Fortran)
add_executable (test1_7F.dyn_gfortran_32_none_none ${SOURCE_LIST_2})
foreach (f ${SOURCE_LIST_2})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE Fortran)
	endif()
	endforeach()
set_target_properties(test1_7F.dyn_gfortran_32_none_none PROPERTIES LINKER_LANGUAGE Fortran)
add_executable (test1_8F.dyn_gfortran_32_none_none ${SOURCE_LIST_93})
foreach (f ${SOURCE_LIST_93})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE Fortran)
	endif()
	endforeach()
set_target_properties(test1_8F.dyn_gfortran_32_none_none PROPERTIES LINKER_LANGUAGE Fortran)
add_executable (test1_9F.dyn_gfortran_32_none_none ${SOURCE_LIST_40})
foreach (f ${SOURCE_LIST_40})
	get_source_file_property(lang ${f} LANGUAGE)
	if(lang MATCHES "C")
		set_source_files_properties(${f} PROPERTIES LANGUAGE Fortran)
	endif()
	endforeach()
set_target_properties(test1_9F.dyn_gfortran_32_none_none PROPERTIES LINKER_LANGUAGE Fortran)


INSTALL (TARGETS
		test1_10F.dyn_gfortran_32_none_none
		test1_11F.dyn_gfortran_32_none_none
		test1_12F.dyn_gfortran_32_none_none
		test1_13F.dyn_gfortran_32_none_none
		test1_14F.dyn_gfortran_32_none_none
		test1_16F.dyn_gfortran_32_none_none
		test1_17F.dyn_gfortran_32_none_none
		test1_18F.dyn_gfortran_32_none_none
		test1_19F.dyn_gfortran_32_none_none
		test1_1F.dyn_gfortran_32_none_none
		test1_20F.dyn_gfortran_32_none_none
		test1_25F.dyn_gfortran_32_none_none
		test1_29F.dyn_gfortran_32_none_none
		test1_2F.dyn_gfortran_32_none_none
		test1_31F.dyn_gfortran_32_none_none
		test1_32F.dyn_gfortran_32_none_none
		test1_34F.dyn_gfortran_32_none_none
		test1_36F.dyn_gfortran_32_none_none
		test1_3F.dyn_gfortran_32_none_none
		test1_4F.dyn_gfortran_32_none_none
		test1_5F.dyn_gfortran_32_none_none
		test1_6F.dyn_gfortran_32_none_none
		test1_7F.dyn_gfortran_32_none_none
		test1_8F.dyn_gfortran_32_none_none
		test1_9F.dyn_gfortran_32_none_none
	DESTINATION ${INSTALL_DIR})

ENDIF()
ENDIF()
ENDIF()
